# GBG_Blankenship

./: .gitignore  GBG_Blankenship.sln  GBG_Task1_Blankenship.sln  README.md
GBG.Data/: GBG.Data.publish.xml  GBG.Data.sqlproj
GBG.Data/dbo/Scripts/PostDeployment/: PostDeployment.sql
GBG.Data/dbo/Tables/: Sample.sql  Status.sql  User.sql
GBG.Entities/: App.config  DataService.cs  DbContext.cs  GBG.Entities.csproj  Sample.cs  Status.cs  User.cs
GBG.Entities.Test/: App.config  DataServiceTest.cs  GBG.Entities.Test.csproj
GBG.Entities.Test/Properties/: AssemblyInfo.cs
GBG.Entities/Properties/: AssemblyInfo.cs
GBG.FileReader/: CMakeLists.txt  GBG.FileReader.vcxproj  GBG.FileReader.vcxproj.filters
GBG.FileReader/data/: reference.txt  sample_data.tsv
GBG.FileReader/include/: DataContainer.h  QualityAllelePair.h
GBG.FileReader/src/: main.cpp
GBG.Web/: GBG.Web.csproj  Global.asax  Global.asax.cs  Web.config  packages.config
GBG.Web/App_Start/: BundleConfig.cs  RouteConfig.cs  WebApiConfig.cs
GBG.Web/Content/: site.css
GBG.Web/Controllers/: HomeController.cs  SamplesController.cs  StatusController.cs  UserController.cs
GBG.Web/Properties/: AssemblyInfo.cs
GBG.Web/Scripts/app/: app.js
GBG.Web/Scripts/app/Samples/: addSample.directive.js  addSample.html  sampleCtrl.js  viewSamples.directive.js  viewSamples.html
GBG.Web/Scripts/app/Service/: SampleService.js  StatusService.js  UserService.js
GBG.Web/Views/: web.config
GBG.Web/Views/Home/: Index.cshtml
GeneByGene.Data/: GeneByGene.Data.csproj
GeneByGene.Data/Properties/: AssemblyInfo.cs
(+3 files in other folders)
